prd/hugo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: techmonkey-docs
spec: {}
status: {}
