prd/hugo/hugo-nginx-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-deploy
  namespace: techmonkey-docs
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - name: docs
        image: pheurtley/techmonkey-docs:0.0.5-main
        ports:
        - containerPort: 80
